--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "declaration": false,
     "module": "esnext",
     "moduleResolution": "node",
+    "noImplicitAny": true,
+    //"suppressImplicitAnyIndexErrors": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
@@ -15,6 +17,7 @@
       "node_modules/@types"
     ],
     "lib": [
+      "es2019",
       "es2018",
       "dom"
     ]
