--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.24.0",
     "@ionic-native/status-bar": "^5.24.0",
     "@ionic/angular": "^5.0.7",
+    "@ngneat/transloco": "^2.16.0",
     "core-js": "^3.6.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
