--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@ionic/angular": "^5.0.7",
     "@ngneat/transloco": "^2.16.0",
     "core-js": "^3.6.5",
+    "rrule": "^2.6.4",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "~9.1.1",
     "@angular/compiler": "~9.1.2",
     "@angular/compiler-cli": "~9.1.2",
@@ -48,7 +49,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.4",
+    "protractor": "^7.0.0",
     "ts-node": "~8.8.2",
     "tslint": "~6.1.1",
     "typescript": "~3.8.3"
