--- a/package.json
+++ b/package.json
@@ -13,47 +13,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.2",
-    "@angular/common": "^9.1.11",
-    "@angular/core": "^9.1.11",
-    "@angular/forms": "^9.1.11",
-    "@angular/platform-browser": "^9.1.11",
-    "@angular/platform-browser-dynamic": "^9.1.11",
-    "@angular/router": "^9.1.11",
-    "@capacitor/core": "2.0.1",
+    "@angular/animations": "^10.0.5",
+    "@angular/common": "^10.0.5",
+    "@angular/core": "^10.0.5",
+    "@angular/forms": "^10.0.5",
+    "@angular/platform-browser": "^10.0.5",
+    "@angular/platform-browser-dynamic": "^10.0.5",
+    "@angular/router": "^10.0.5",
+    "@capacitor/android": "^2.3.0",
+    "@capacitor/core": "^2.3.0",
     "@ionic-native/core": "^5.27.0",
     "@ionic-native/splash-screen": "^5.27.0",
     "@ionic-native/status-bar": "^5.27.0",
-    "@ionic/angular": "^5.2.3",
-    "@ngneat/transloco": "^2.17.3",
+    "@ionic/angular": "^5.3.0",
+    "@ngneat/transloco": "^2.18.3",
+    "@zxing/ngx-scanner": "^3.0.0",
+    "angularx-qrcode": "^10.0.6",
     "core-js": "^3.6.5",
     "rrule": "^2.6.4",
-    "tslib": "^1.13.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.3",
+    "zxing": "^0.1.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.10",
-    "@angular/cli": "^9.1.10",
-    "@angular/compiler": "^9.1.11",
-    "@angular/compiler-cli": "^9.1.11",
-    "@angular/language-service": "^9.1.11",
-    "@capacitor/cli": "2.0.1",
-    "@ionic/angular-toolkit": "^2.2.0",
+    "@angular-devkit/build-angular": "^0.1000.4",
+    "@angular/cli": "^10.0.4",
+    "@angular/compiler": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.5",
+    "@angular/language-service": "^10.0.5",
+    "@capacitor/cli": "^2.3.0",
+    "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.13.13",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.5.0",
+    "@types/node": "^14.0.26",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^5.0.9",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
-    "ts-node": "~8.8.2",
+    "ts-node": "~8.10.2",
     "tslint": "^6.1.2",
-    "typescript": "~3.8.3"
+    "typescript": "~3.9.7"
   },
   "description": "An Ionic project"
 }
