--- a/angular.json
+++ b/angular.json
@@ -9,37 +9,32 @@
   	"@rcc/core":{
 		"projectType":	"library",		
   		"root": 		"lib/core",
-		"sourceRoot":	"lib/core/src",
-		"architect": {
-			"build": {
-				"builder": "@angular-devkit/build-ng-packagr:build",
-				"options": {
-	            	"tsConfig":	"lib/core/tsconfig.lib.json",
-	            	"project":	"lib/core/ng-package.json"
-	          	},
-			}
-		}
+  		"sourceRoot":	"lib/core/src",
+  		"architect": {
+  			"build": {
+  				"builder": "@angular-devkit/build-ng-packagr:build",
+  				"options": {
+  	            	"tsConfig":	"lib/core/tsconfig.lib.json",
+  	            	"project":	"lib/core/ng-package.json"
+  	          	},
+  			}
+  		}
   	},
 
   	"@rcc/common":{
-		"projectType":	"library",		
-  		"root": 		"lib/common",
-		"sourceRoot":	"lib/common/src",
-		"architect": {
-			"build": {
-				"builder": "@angular-devkit/build-ng-packagr:build",
-				"options": {
-	            	"tsConfig":	"lib/common/tsconfig.lib.json",
-	            	"project":	"lib/common/ng-package.json"
-	          	},
-			}
-		}
+  		"projectType":	"library",		
+    		"root": 		"lib/common",
+  		"sourceRoot":	"lib/common/src",
+  		"architect": {
+  			"build": {
+  				"builder": "@angular-devkit/build-ng-packagr:build",
+  				"options": {
+  	            	"tsConfig":	"lib/common/tsconfig.lib.json",
+  	            	"project":	"lib/common/ng-package.json"
+  	          	},
+  			}
+  		}
   	},
-
-
-
-
-
 
     "app": {
       "root": "",
@@ -53,14 +48,14 @@
           "options": {
             "aot": true,
             "outputPath": "www",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "index": "app/index.html",
+            "main": "app/main.ts",
+            "polyfills": "app/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
                 "glob": "**/*",
-                "input": "src/assets",
+                "input": "app/src/assets",
                 "output": "assets"
               },
               {
@@ -71,10 +66,10 @@
             ],
             "styles": [
               {
-                "input": "src/theme/variables.scss"
+                "input": "app/theme/variables.scss"
               },
               {
-                "input": "src/global.scss"
+                "input": "app/global.scss"
               }
             ],
             "scripts": []
@@ -83,8 +78,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "app/src/environments/environment.ts",
+                  "with": "app/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
